# document-rag

./: .gitignore  AGENTS.md  README.md  document_rag.py  pyproject.toml
.agents/skills/document-rag/: SKILL.md
.agents/skills/document-rag-install/: SKILL.md
tests/: test_document_rag.py
